--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,1 +1,9 @@
 <h1>Bookings</h1>
+
+<ul>
+    <% bookings.each do | booking | %>
+        <li>
+            <% booking.category_id %>
+        </li>
+    <% end %>
+</ul>
