--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Bookings</h1>
 
 <ul>
-    <% bookings.each do | booking | %>
+    <% @bookings.each do | booking | %>
         <li>
             <% booking.category_id %>
         </li>
