--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -3,6 +3,7 @@
 <ul>
     <% @bookings.each do | booking | %>
         <li>
+            <p><%= booking.created_at.strftime("%F %T") %></p>
             <p><%= booking.category.name %></p>
             <p><%= booking.amount %></p>
         </li>
