add link to details view

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -6,6 +6,7 @@
             <p><%= booking.created_at.strftime("%F %T") %></p>
             <p><%= booking.category.name %></p>
             <p><%= booking.amount %></p>
+            <%= link_to 'details', booking %>
         </li>
     <% end %>
 </ul>
