--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,12 +1,14 @@
 <h1>Bookings</h1>
-
+   
 <ul>
     <% @bookings.each do | booking | %>
-        <li>
-            <p><%= booking.created_at.strftime("%F %T") %></p>
-            <p><%= booking.category.name %></p>
-            <p><%= booking.amount %></p>
-            <%= link_to 'details', booking %>
+        <li class="mb-2">
+            <div class="row">
+                <div class="col-4"><%= booking.created_at.strftime("%F %T") %></div>
+                <div class="col-4"><%= booking.amount %>€</div>
+                <div class="col-4"><%= booking.category.name %></div>
+            </div>
+            <div><%= link_to 'details', booking %></div>
         </li>
     <% end %>
 </ul>
