add comment to bookings

--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -7,8 +7,13 @@
     </div>
   
     <div>
-    <%= form.label :category_id %><br>
-    <%= form.number_field :category_id %>
+      <%= form.label :category_id %><br>
+      <%= form.number_field :category_id %>
+    </div>
+
+    <div>
+      <%= form.label :comment %><br>
+      <%= form.text_area :comment %>
     </div>
   
     <div>
