--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -4,9 +4,10 @@
     <% @bookings.each do | booking | %>
         <li class="mb-2">
             <div class="row">
-                <div class="col-4"><%= booking.created_at.strftime("%F %T") %></div>
-                <div class="col-4"><%= booking.amount %>€</div>
-                <div class="col-4"><%= booking.category.name %></div>
+                <div class="col-3"><%= booking.created_at.strftime("%F %T") %></div>
+                <div class="col-3"><%= booking.amount %>€</div>
+                <div class="col-3"><%= booking.category.name %></div>
+                <div class="col-3"><%= booking.comment %></div>
             </div>
             <div><%= link_to 'details', booking %></div>
         </li>
