--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -3,3 +3,4 @@
 <p><%= @booking.created_at.strftime("%F %T") %></p>
 <p><%= @booking.category.name %></p>
 <p><%= @booking.amount %></p>
+<p><%= @booking.comment %></p>
