--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -10,7 +10,10 @@
                     <div class="col-3"><%= booking.category.name %></div>
                     <div class="col-3"><%= booking.comment %></div>
                 </div>
-                <div><%= link_to 'details', booking_path(booking) %></div>
+                <div>
+                    <%= link_to 'details', booking_path(booking) %>
+                    | <%= link_to 'delete', booking_path(booking), method: :delete, data: { confirm: "Are you sure?" } %>
+                </div>
             </a>
         </li>
     <% end %>
