--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -8,7 +8,7 @@
   
     <div>
       <%= form.label :category_id %><br>
-      <%= form.number_field :category_id %>
+      <%= form.collection_select :category_id, Category.all, :id, :name, include_blank: true %>
     </div>
 
     <div>
