--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -4,6 +4,9 @@
     <div>
       <%= form.label :amount %><br>
       <%= form.number_field :amount, :step => "0.01" %>
+      <% @booking.errors.full_messages_for(:amount).each do |message| %>
+        <div><%= message %></div>
+      <% end %>
     </div>
   
     <div>
