--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -13,6 +13,11 @@
     </div>
 
     <div>
+      <%= form.label :account_id %><br>
+      <%= form.collection_select :account_id, Account.all, :id, :name, include_blank: false %>
+    </div>
+
+    <div>
       <%= form.label :comment %><br>
       <%= form.text_area :comment %>
     </div>
