--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -21,3 +21,7 @@
     <div class="col-6 text-end">comment: </div>
     <div class="col-6"><%= @booking.comment %></div>
 </div>
+<div class="row">
+    <div class="col-6 text-end">account: </div>
+    <div class="col-6"><%= @booking.account.name %></div>
+</div>
