format currency output

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -6,7 +6,7 @@
             <a href="<%= booking_path(booking) %>">    
                 <div class="row">
                     <div class="col-3"><%= booking.created_at.strftime("%F %T") %></div>
-                    <div class="col-3"><%= booking.amount %>€</div>
+                    <div class="col-3 text-end"><%= number_to_currency(booking.amount, unit: "€", separator: ",", delimiter: ".", format: "%n %u") %></div>
                     <div class="col-3"><%= booking.category.name %></div>
                     <div class="col-3"><%= booking.comment %></div>
                 </div>
