add account name to balance view

--- a/app/views/balances/show.html.erb
+++ b/app/views/balances/show.html.erb
@@ -16,3 +16,7 @@
     <div class="col-6 text-end">balance: </div>
     <div class="col-6"><%= @balance.balance %></div>
 </div>
+<div class="row">
+    <div class="col-6 text-end">account: </div>
+    <div class="col-6"><%= @balance.account.name %></div>
+</div>
