--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -13,3 +13,11 @@
     <div class="col-6 text-end">iban: </div>
     <div class="col-6"><%= @account.iban %></div>
 </div>
+
+<h3>Balances</h3>
+<% @account.balances.each do | balance | %>
+    <div class="row">
+        <div class="col-6 text-end"><%= number_to_currency(balance.balance, unit: "€", separator: ",", delimiter: ".", format: "%n %u") %></div>
+        <div class="col-6"><%= balance.year %>.<%= balance.month.to_s.rjust(2, '0') %>.</div>
+    </div>
+<% end %>
