--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,8 @@
   </head>
 
   <body class="bg-dark text-light">
+    <%= render "layouts/navbar" %>
+
     <div class="container">
       <%= yield %>
     </div>
