--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -6,8 +6,13 @@
             <li class="nav-item mx-2">
                 <%= link_to "Accounts", accounts_path %>
             </li>
+
             <li class="nav-item mx-2">
                 <%= link_to "Bookings", bookings_path %>
+            </li>
+
+            <li class="nav-item mx-2">
+                <%= link_to "Categories", categories_path %>
             </li>
         </ul>
     </div>
