--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,5 +1,9 @@
 <h1>Categories</h1>
-   
+
+<div class="mb-2">
+    <%= link_to "new", new_category_path %>
+</div>
+
 <ul>
     <% @categories.each do | category | %>
         <li class="mb-2">
@@ -8,7 +12,7 @@
                     <div class="col"><%= category.name %></div>
                 </div>
                 <div>
-                    <%= link_to 'details', category_path(category) %>
+                    <%= link_to 'edit', edit_category_path(category) %>
                     | <%= link_to 'delete', category_path(category), method: :delete, data: { confirm: "Are you sure?" } %>
                 </div>
             </a>
