--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -9,3 +9,5 @@
     <div class="col-6 text-end">name: </div>
     <div class="col-6"><%= @category.name %></div>
 </div>
+
+<%= render "back_to_categories" %>
