--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -25,3 +25,5 @@
     <div class="col-6 text-end">account: </div>
     <div class="col-6"><%= @booking.account.name %></div>
 </div>
+
+<%= render "back_to_bookings" %>
