--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -21,3 +21,5 @@
         <div class="col-6"><%= balance.year %>.<%= balance.month.to_s.rjust(2, '0') %>.</div>
     </div>
 <% end %>
+
+<%= render "back_to_accounts" %>
