--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,5 @@
-// Graphical variables
-
-
-// External libraries
+// VENDOR
 @import "bootstrap/scss/bootstrap";
+
+// RESET
+@import "core/reset";
