add general css

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,3 +3,8 @@
 
 // RESET
 @import "core/reset";
+@import "core/colors";
+@import "core/general";
+
+// COMPONENTS
+@import "components/list_item";
