--- a/app/assets/stylesheets/core/_reset.scss
+++ b/app/assets/stylesheets/core/_reset.scss
@@ -1,13 +1,19 @@
 *,
 *::before,
-*::after { 
+*::after {
     box-sizing:border-box; 
 }
 
 a {
-    text-decoration:none; 
-    color:inherit; 
+    text-decoration:none;
+    color:inherit;
     cursor:pointer;
+    
+    &:hover {
+        text-decoration:none;
+        color:inherit;
+        cursor:pointer;
+    }
 }
 
 button {
