--- a/app/views/accounts/_dashboard_table_data.html.erb
+++ b/app/views/accounts/_dashboard_table_data.html.erb
@@ -17,8 +17,11 @@
     </thead>
     <tbody>
         <tr class="text-end">
-            <% for i in 0..11 do %>
-                <% balance = @account.balances[i].present? ? @account.balances[i].balance : 0.0 %>
+            <% for i in 1..12 do %>
+                <% 
+                    value = @account.balances.find_by(:month => i)
+                    balance = value.present? ? value.balance : 0
+                %>
                 <td class="col-1"><%= number_to_currency(balance, unit: "€", separator: ",", delimiter: ".", format: "%n%u") %></td>
             <% end %>
         </tr>
