fix balances per year selection

--- a/app/views/accounts/_dashboard_table_data.html.erb
+++ b/app/views/accounts/_dashboard_table_data.html.erb
@@ -19,7 +19,7 @@
         <tr class="text-end">
             <% for i in 1..12 do %>
                 <% 
-                    value = @account.balances.find_by(:month => i)
+                    value = @balances_per_year.find_by(:month => i)
                     balance = value.present? ? value.balance : 0
                 %>
                 <td class="col-1"><%= number_to_currency(balance, unit: "€", separator: ",", delimiter: ".", format: "%n%u") %></td>
