--- a/app/views/accounts/_dashboard_table_head.html.erb
+++ b/app/views/accounts/_dashboard_table_head.html.erb
@@ -9,7 +9,7 @@
         <tr>
             <th scope="row">balance</th>
             <td class="text-end">
-                <%= number_to_currency(@account.balances.inject(0) { |sum, item| sum + item.balance }, unit: "€", separator: ",", delimiter: ".", format: "%n%u") %>
+                <%= number_to_currency(@balances_per_year.inject(0) { |sum, item| sum + item.balance }, unit: "€", separator: ",", delimiter: ".", format: "%n%u") %>
             </td>
         </tr>
     </tbody>
