change booking created_at to booked_at

--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -6,6 +6,11 @@
         <div><%= message %></div>
       <% end %>
     </div>
+
+    <div>
+      <%= form.label :booked_at %><br>
+      <%= form.date_field :booked_at %>
+    </div>
   
     <div>
       <%= form.label :category_id %><br>
