--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -6,8 +6,8 @@
 </div>
 
 <div class="row">
-    <div class="col-6 text-end">created at: </div>
-    <div class="col-6"><%= @booking.created_at.strftime("%F %T") %></div>
+    <div class="col-6 text-end">booked at: </div>
+    <div class="col-6"><%= @booking.booked_at.strftime("%F %T") %></div>
 </div>
 <div class="row">
     <div class="col-6 text-end">category: </div>
