--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -7,7 +7,7 @@
 
 <div class="row">
     <div class="col-6 text-end">booked at: </div>
-    <div class="col-6"><%= @booking.booked_at.strftime("%F %T") %></div>
+    <div class="col-6"><%= @booking.booked_at.strftime("%Y-%m-%d") %></div>
 </div>
 <div class="row">
     <div class="col-6 text-end">category: </div>
