--- a/app/views/accounts/_dashboard_table_data.html.erb
+++ b/app/views/accounts/_dashboard_table_data.html.erb
@@ -22,7 +22,7 @@
                     value = @balances_per_year.find_by(:month => i)
                     balance = value.present? ? value.balance : 0
                 %>
-                <td class="col-1"><%= number_to_currency(balance, unit: "€", separator: ",", delimiter: ".", format: "%n%u") %></td>
+                <td class="col-1"><%= currency_as_euro(balance) %></td>
             <% end %>
         </tr>
 
@@ -34,7 +34,7 @@
                         sum = bookings_per_month.inject(0) { |sum, item| sum + item.amount }
                         background_cls = sum >= 0 ? 'bg-success' : 'bg-danger'
                     %>
-                    <td class="col-1 <%= background_cls %>"><%= number_to_currency(sum, unit: "€", separator: ",", delimiter: ".", format: "%n%u") %></td>
+                    <td class="col-1 <%= background_cls %>"><%= currency_as_euro(sum) %></td>
                 <% end %>
             </tr>
         <% end %>
