--- a/app/views/accounts/_dashboard_table_head.html.erb
+++ b/app/views/accounts/_dashboard_table_head.html.erb
@@ -9,7 +9,7 @@
         <tr styles="border-spacing: 0 20px;">
             <th scope="row">balance</th>
             <td class="text-end">
-                <%= number_to_currency(@balances_per_year.inject(0) { |sum, item| sum + item.balance }, unit: "€", separator: ",", delimiter: ".", format: "%n%u") %>
+                <%= currency_as_euro(@balances_per_year.inject(0) { |sum, item| sum + item.balance }) %>
             </td>
         </tr>
 
@@ -21,7 +21,7 @@
                 %>
                 <th scope="row"><%=bookings.first.category.name%></th>
                 <td class="text-end <%= background_cls %>">
-                    <%= number_to_currency(sum, unit: "€", separator: ",", delimiter: ".", format: "%n%u") %>
+                    <%= currency_as_euro(sum) %>
                 </td>
             </tr>
         <% end %>
