--- a/app/views/accounts/_dashboard_table_data.html.erb
+++ b/app/views/accounts/_dashboard_table_data.html.erb
@@ -18,9 +18,10 @@
     <tbody>
         <tr class="text-end">
             <% for i in 1..12 do %>
-                <% balance = calc_balances_per_month(i, @balances_per_year) %>
-                <td class="col-1 <%= css_currency_bg(balance) %>">
-                    <%= as_euro(balance) %>
+                <% balance_sum = calc_balances_per_month(i, @balances_per_year) %>
+
+                <td class="col-1 <%= css_currency_bg(balance_sum) %>">
+                    <%= as_euro(balance_sum) %>
                 </td>
             <% end %>
         </tr>
@@ -28,10 +29,10 @@
         <% @account.bookings.group_by(&:category_id).values.each do |bookings| %>
             <tr class="text-end">
                 <% for i in 1..12 do %>
-                    <% sum = calc_category_per_month(i, bookings) %>
+                    <% category_sum = calc_category_per_month(i, bookings) %>
 
-                    <td class="col-1 <%= css_currency_bg(sum) %>">
-                        <%= as_euro(sum) %>
+                    <td class="col-1 <%= css_currency_bg(category_sum) %>">
+                        <%= as_euro(category_sum) %>
                     </td>
                 <% end %>
             </tr>
