change table hover styles

--- a/app/assets/stylesheets/core/_colors.scss
+++ b/app/assets/stylesheets/core/_colors.scss
@@ -1,6 +1,9 @@
 $color-primary: rgb(30, 144, 255);
 $color-secondary: rgb(108, 117, 125);
 
+$color-positive: rgb(25, 135, 84);
+$color-negative: rgb(220, 53, 69);
+
 .color-primary { background-color: $color-primary; }
 .color-secondary { background-color: $color-secondary; }
 
