--- a/app/views/accounts/_dashboard_table_head.html.erb
+++ b/app/views/accounts/_dashboard_table_head.html.erb
@@ -1,4 +1,4 @@
-<table class="table table-dark table-stripped table-hover">
+<table class="table table-dark">
     <thead>
         <tr class="text-center">
             <th scope="col">#</th>
@@ -6,7 +6,7 @@
         </tr>
     </thead>
     <tbody>
-        <tr styles="border-spacing: 0 20px;">
+        <tr>
             <%  balance_sum = calc_balances_per_year(@balances_per_year) %>
 
             <th scope="row">balance</th>
