--- a/app/views/accounts/_dashboard_table_data.html.erb
+++ b/app/views/accounts/_dashboard_table_data.html.erb
@@ -1,4 +1,4 @@
-<table class="table table-dark table-stripped table-hover">
+<table class="table table-dark">
     <thead>
         <tr class="text-center">
             <th class="col-1" scope="col">Jan</th>
