add balances index

--- a/app/views/balances/show.html.erb
+++ b/app/views/balances/show.html.erb
@@ -21,3 +21,5 @@
     <div class="col-6 text-end">account: </div>
     <div class="col-6"><%= @balance.account.name %></div>
 </div>
+
+<%= render "back_to_balances" %>
