--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -8,6 +8,10 @@
             </li>
 
             <li class="nav-item mx-2">
+                <%= link_to "Balances", balances_path %>
+            </li>
+
+            <li class="nav-item mx-2">
                 <%= link_to "Bookings", bookings_path %>
             </li>
 
