--- a/app/assets/stylesheets/core/_colors.scss
+++ b/app/assets/stylesheets/core/_colors.scss
@@ -1,6 +1,9 @@
 $color-primary: rgb(30, 144, 255);
 $color-secondary: rgb(108, 117, 125);
 
+$color-dark: rgb(33, 37, 41);
+$color-lightgrey: rgb(55, 59, 62);
+
 $color-positive: rgb(25, 135, 84);
 $color-negative: rgb(220, 53, 69);
 
