--- a/app/views/accounts/dashboard/_categories.html.erb
+++ b/app/views/accounts/dashboard/_categories.html.erb
@@ -1,4 +1,4 @@
-<% @account.bookings.group_by(&:category_id).values.each do |bookings| %>
+<% @bookings_per_year.group_by(&:category_id).values.each do |bookings| %>
     <div class="dashboard-row row dashboard-border-bottom text-end">
         <div class="dashboard-col col-2 dashboard-border-right border-2">
             <% category_sum = calc_category_per_year(bookings) %>
