--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -15,7 +15,7 @@
 </div>
 <div class="row">
     <div class="col-6 text-end">amount: </div>
-    <div class="col-6"><%= currency_as_euro(@booking.amount) %></div>
+    <div class="col-6"><%= as_euro(@booking.amount) %></div>
 </div>
 <div class="row">
     <div class="col-6 text-end">comment: </div>
