--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -14,7 +14,7 @@
   
     <div>
       <%= form.label :category_id %><br>
-      <%= form.collection_select :category_id, Category.all, :id, :name, include_blank: true %>
+      <%= form.collection_select :category_id, Category.all.sort_by{ |e| e[:name] }, :id, :name, include_blank: true %>
     </div>
 
     <div>
