--- a/app/views/accounts/dashboard/_balances.html.erb
+++ b/app/views/accounts/dashboard/_balances.html.erb
@@ -1,4 +1,4 @@
-<div class="dashboard-row row dashboard-border-bottom text-end">
+<div class="dashboard-row row border-bottom border-2 mb-2 text-end">
     <div class="dashboard-col col-2 dashboard-border-right border-2">
         <%  balance_sum = calc_balances_per_year(@balances_per_year) %>
 
